<resources>
    <string name="app_name">HomeProjectApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error">Ops! Something went wrong</string>
    <string name="sadsmiley">sadsmiley</string>
    <string name="id">Id :</string>
    <string name="name">Name :</string>
    <string name="organization_name">organization name</string>
    <string name="description">Description :</string>
    <string name="node_id">Node Id :</string>
    <string name="description_of_organization">Description of organization</string>
    <string name="url">www.url.com</string>
</resources>